<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.metafetish.buttplug.apps.websocketservergui.WebsocketServerControl">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/port_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/port"
                android:inputType="number"
                android:text="@string/default_port" />
        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/loopback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loopback" />

        <Switch
            android:id="@+id/secure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secure" />

        <Button
            android:id="@+id/server_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_start" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/connection_details" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addresses" />

            <TextView
                android:id="@+id/addresses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_not_connected" />

                <Button
                    android:id="@+id/client_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/client_disconnect" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_error" />


            <TextView
                android:id="@+id/last_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
